tests/compile_fail/borrow_mut/struct_and_field.rs
#[derive(derive_more::BorrowMut)]
#[borrow_mut(forward)]
struct Foo(
    #[borrow_mut]
    i32,
);

fn main() {}
