tests/compile_fail/borrow_mut/struct_and_field.stderr
error: `#[borrow_mut(...)]` cannot be placed on both struct and its field
 --> tests/compile_fail/borrow_mut/struct_and_field.rs:4:5
  |
4 |     #[borrow_mut]
  |     ^
